(#409) - Fix introspection annotations for rsvg_handle_get_geometry_sub()

Optional out parameters need to be (out)(allow-none), like in
pango_layout_get_extents().

Fixes https://gitlab.gnome.org/GNOME/librsvg/issues/409