librsvg/rsvg-handle.c
@@ -1041,8 +1041,8 @@ rsvg_handle_get_dimensions_sub (RsvgHandle *handle,
 /**
  * rsvg_handle_get_geometry_sub:
  * @handle: A #RsvgHandle
- * @ink_rect: (out)(nullable): A place to store the SVG fragment's geometry.
- * @logical_rect: (out)(nullable): A place to store the SVG fragment's logical geometry.
+ * @ink_rect: (out)(allow-none): A place to store the SVG fragment's geometry.
+ * @logical_rect: (out)(allow-none): A place to store the SVG fragment's logical geometry.
  * @id: (nullable): An element's id within the SVG, starting with "##", for
  * example, "##layer1"; or %NULL to use the whole SVG.
  *
